[gd_scene load_steps=7 format=3 uid="uid://dyvmv707ag85e"]

[ext_resource type="Script" path="res://prefabs/Main_Menu.gd" id="1_8s186"]
[ext_resource type="Theme" uid="uid://cxwar7yiio02f" path="res://new_theme.tres" id="2_qucm0"]
[ext_resource type="PackedScene" uid="uid://1do7epcpxvo" path="res://sences/node_2d.tscn" id="2_qvm2v"]
[ext_resource type="FontFile" uid="uid://dbfeek2jnoxaa" path="res://textures/kenney_space-shooter-redux/Bonus/kenvector_future.ttf" id="3_r28xk"]

[sub_resource type="Theme" id="Theme_txfpw"]
default_font = ExtResource("3_r28xk")
default_font_size = 30

[sub_resource type="Theme" id="Theme_obrpn"]
default_font = ExtResource("3_r28xk")
default_font_size = 36

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8s186")

[node name="Node2D" parent="." instance=ExtResource("2_qvm2v")]

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -264.0
offset_right = 128.0
offset_bottom = -136.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_qucm0")
text = "EÃ—IT"

[node name="Button2" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -128.0
offset_top = 128.0
offset_right = 128.0
offset_bottom = 256.0
grow_horizontal = 2
theme = SubResource("Theme_txfpw")
text = "START"

[node name="score" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -528.0
offset_top = 568.0
offset_right = -237.0
offset_bottom = 632.0
grow_horizontal = 2
theme = SubResource("Theme_obrpn")
text = "SCORE: 0000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -128.0
offset_top = 32.0
offset_right = 120.0
offset_bottom = 96.0
grow_horizontal = 2
theme = SubResource("Theme_obrpn")
text = "MAIN MENU"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="highscore" from="Node2D" to="." method="_on_node_2d_highscore"]
[connection signal="pressed" from="Button" to="." method="_on_START_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_EXIT_pressed"]
